<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_padding"
    android:paddingRight="@dimen/activity_vertical_padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ListStudentsActivity"
    tools:showIn="@layout/activity_list_students">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/danhsachsv"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorBlue" />

    <LinearLayout
        android:id="@+id/ll_row_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/width_small_column"
            android:layout_height="wrap_content"
            android:background="@color/colorWhiteGray"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="STT"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="@dimen/divider_height"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhiteGray"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/masv"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="@dimen/divider_height"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhiteGray"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/tensv"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="@dimen/divider_height"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhiteGray"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/ngaysinh"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="@dimen/divider_height"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="@dimen/width_small_column"
            android:layout_height="wrap_content"
            android:background="@color/colorWhiteGray"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:text="@string/gt"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvListStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_row_title" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="@dimen/width_image_button"
        android:layout_height="@dimen/height_image_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addStudent"
        android:src="@drawable/add" />

</RelativeLayout>